plugins {
    id "application"
    id 'java'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

ext { javaMainClass = "com.nexgo.cloud.tester.Tester" }
application { mainClassName = javaMainClass }

//noinspection ConfigurationAvoidance
task runWithExec(type: Exec) {
    commandLine "java", "--enable-preview", "-classpath", "tester-0.32-alpha2.zip;libs/*", javaMainClass
}
